Add external link metadata handling
